iphone screenshots frame blurr issue fixed, better frame added, styles changed accordingly

--- a/components/Banner/styles.module.css
+++ b/components/Banner/styles.module.css
@@ -21,7 +21,7 @@
 
 .img,
 .img2 {
-  width: 18rem;
+  width: 17rem;
   height: 32rem;
   margin-bottom: 0.75rem;
 }
@@ -93,7 +93,7 @@
 
   .img,
   .img2 {
-    width: 10rem;
+    width: 11rem;
     height: 20rem;
     margin-bottom: 0.5rem;
   }
