--- a/components/Feature/styles.module.css
+++ b/components/Feature/styles.module.css
@@ -15,7 +15,7 @@
 }
 
 .img {
-  width: 18rem;
+  width: 15rem;
   height: 28rem;
   z-index: 100;
 }
@@ -28,8 +28,8 @@
 
 .gradient {
   position: absolute;
-  width: 15rem;
-  height: 27rem;
+  width: 13rem;
+  height: 26rem;
   top: 3.5rem;
   z-index: -100;
   border-radius: 1.5rem !important;
@@ -41,12 +41,12 @@
   }
 
   .img {
-    width: 16rem;
+    width: 13rem;
     height: 25rem;
   }
 
   .gradient {
-    width: 12rem;
+    width: 11rem;
     height: 22rem;
     top: 4.5rem;
     z-index: -100;
